nav bar issue with spacing list elements

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,8 +4,6 @@ body{
     --bg-generic: #EAE7DC;
     --active-elem: #E98074;
     --passive-elem: #E85A4F;
-
-    background-color: black;
     font-size: 20px;
     font-family: "Lato", Arial, sans-serif;
     line-height: 1.8;
@@ -39,19 +37,28 @@ body{
 
 /* Nav bar Styling */
 
+.guest-login {
+    float: right;
+    color: white;
+}
+
 /* Page Header Part */
+
+li.a{
+    color: white;
+}
+
 header {
-    background-color: var(--bg-content);
+    background-color: black;
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
-    height: 50px;
+    height: 60px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     box-shadow: 0 0 25px 0 black;
-    
 }
 
 header img {
@@ -198,9 +205,6 @@ input {
     width: 200px;
 }
 
-a.guestLogin {
-    color: black
-}
 
 /* Page Main Part */
 
